# biblioteca-digital-logistica-publica

./: .env.example  .gitattributes  .gitignore  DEMO.md  Makefile  README.md  pyproject.toml
docker/: .env.example  docker-compose.yml
docker/nourau/: Dockerfile  apache.conf  config.php.template  config_d.php.template  entrypoint.sh
docker/nourau/nourau-src/: collab_index.ini  config.css  config.php  config_d.php  confignovo.css  index.php  maintainer_index.ini  robots.txt
docker/portal/: Dockerfile
docker/postgres/init/: 01-schema.sql  02-schema-nr.sql  03-reset.sql  04-reset-nr.sql  05-custom-metadata.sql  06-collections.sql  06-taxonomia.sql  07-categories.sql  08-type-information.sql  09-portal-readonly-user.sql
docs/: identidade_visual.md  validacao_a11y.md
docs/referencias/: README_logos_originais.md  TODOS_JURIDICO.md
portal/: manage.py
portal/catalog/: api.py  context_processors.py  facets.py  models.py  search.py  urls.py  views.py
portal/catalog/templatetags/: catalog_tags.py
portal/portal/: preview_settings.py  settings.py
portal/static/css/: acervo-filters.css  sp-design-system.css  style.css
portal/static/js/: acervo-filters.js  main.js
portal/templates/: about.html  base.html  collection_detail.html  collection_list.html  document_detail.html  home.html  search.html
portal/templates/_partials/: _aviso_rascunho.html  _banner_cookies.html  _banner_lai.html  _barra_govsp.html  _facet_list.html  _header_institucional.html  _icons_sprite.html  _menu_principal.html  _rodape_institucional.html  (+1 more)
tools/: audit_check.py  preview_render.py
(+83 files in other folders)
